2007-11-05  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* src/universal-cp/event-treeview.c:

	Fix a potential leak.

2007-11-05  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* configure.ac:
	* src/Makefile.am:

	- Provide an option to disable building of AV tools.
	- Unavailability of gupnp-av only disables build of AV tools.

2007-11-05  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* configure.ac:
	* src/av-cp/Makefile.am:

	Check for each requirement separately.

2007-11-05  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* configure.ac:

	Explicitly require gtk+ >= 2.12.

2007-11-05  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* src/universal-cp/event-treeview.c:

	Show the full value in a tooltip when the mouse hovers on an event
	treeview row.

2007-11-05  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* src/universal-cp/details-treeview.c:
	* src/universal-cp/details-treeview.h:
	* src/universal-cp/device-treeview.c:
	* src/universal-cp/main.c:
	* src/universal-cp/main.h:

	Move some functions from main module to the appropriate modules.

2007-11-05  Zeeshan Ali Khattak  <zeenix@gstreamer.net>
	    Ross Burton <ross@openedhand.com>

	* data/Makefile.am:
	* data/gupnp-av-cp.desktop:
	* data/gupnp-network-light.desktop:
	* data/gupnp-universal-cp.desktop:

	Add a desktop file for each tool.

2007-11-04  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* src/av-cp/playlist-treeview.c:

	- Prefer to use the icon from the MediaServer to represent it.
	- Remove MediaServer from the treeview after it's unavailable.

2007-11-04  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* src/common/icons.c:
	* src/common/icons.h:
	* src/av-cp/renderer-combo.c:
	* src/universal-cp/device-treeview.c:

	Use a callback for icon availability notification.

2007-11-04  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* src/av-cp/Makefile.am:
	* src/av-cp/gui.c:
	* src/av-cp/gui.h:
	* src/av-cp/main.c:
	* src/av-cp/playlist-treeview.c:
	* src/av-cp/playlist-treeview.h: